--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -61,7 +61,7 @@ module-margin-left = 1
 module-margin-right = 1
 
 
-modules-left = i3 spotify
+modules-left = i3
 #modules-center =
 modules-right = pulseaudio bandwidth ipv4 wifi-signal eth updates memory cpu battery date
 
@@ -70,13 +70,6 @@ tray-padding = 5
 
 cursor-click = pointer
 cursor-scroll = ns-resize
-
-[module/spotify]
-type = custom/script
-tail = true
-format-prefix = %{F#1DB954} %{F-}
-format = <label>
-exec = playerctl metadata -p spotify --format '{{ status }} :: {{ artist }} - {{ title }}' -F
 
 [module/bandwidth]
 inherit = module/wlan
