--- a/i3/config
+++ b/i3/config
@@ -12,7 +12,7 @@
 set $mod Mod4
 
 # Background
-exec_always --no-startup-id feh --bg-scale ~/Pictures/background.jpg
+exec_always --no-startup-id nitrogen --restore &&
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -41,11 +41,6 @@ bindsym XF86AudioRaiseVolume exec --no-startup-id ~/.config/i3/volume-max-100.sh
 bindsym XF86AudioLowerVolume exec --no-startup-id ~/.config/i3/volume-max-100.sh down 5 && $refresh_i3status
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
-
-# Media player controls
-bindsym XF86AudioPlay exec --no-startup-id playerctl play-pause
-bindsym XF86AudioNext exec --no-startup-id playerctl next
-bindsym XF86AudioPrev exec --no-startup-id playerctl previous
 
 # Backlight
 bindsym XF86MonBrightnessUp exec --no-startup-id light -A 5
@@ -201,11 +196,9 @@ client.urgent           #44475A #FF5555 #F8F8F2 #FF5555   #FF5555
 client.placeholder      #282A36 #282A36 #F8F8F2 #282A36   #282A36
 client.background       #F8F8F2
 
-# dmenu
-#bindsym Control+space exec --no-startup-id j4-dmenu-desktop --dmenu "dmenu -i -nf '#F8F8F2' -nb '#282A36' -sb '#FFAA01' -sf '#F8F8F2' -fn 'monospace-10' -p '  '"
-
 # Rofi
 bindsym $mod+d exec "rofi -modi drun, run -show drun"
+
 # Remove border and title
 for_window [class="^.*"] border pixel 3
 
